# reasoning-gym

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GALLERY.md  NOTICE.txt  README.md  launch.sh  play.py  pyproject.toml  python  requirements-dev.txt
.github/workflows/: generate-gallery.yml  pre-commit.yml  tests.yml
docker/: Dockerfile  entrypoint.sh
eval/: .gitignore  README.md  eval.py  eval.sh  eval_basic.json  eval_basic.py  eval_basic.sh  eval_config.py  example_config.json  example_config.yaml  generate_config.py  requirements-eval.txt  requirements.txt
eval/r1/: eval.py  eval_config.py
eval/results/: evaluation_google_gemini-2.0-flash-001_20250209_223527.json  leg_counting_google_gemini-2.0-flash-001_20250209_220608.json  leg_counting_google_gemini-2.0-flash-001_20250209_220753.json  propositional_logic_google_gemini-2.0-flash-001_20250209_220610.json  propositional_logic_google_gemini-2.0-flash-001_20250209_220824.json  summary_google_gemini-2.0-flash-001_20250209_223527.json  summary_google_gemini-2.0-flash-001_20250209_224813.json  summary_google_gemini-2.0-flash-001_20250210_212645.json  summary_google_gemini-2.0-flash-001_20250210_212924.json  summary_google_gemini-2.0-flash-001_20250210_213352.json  summary_google_gemini-2.0-flash-001_20250210_213418.json  summary_google_gemini-2.0-flash-001_20250210_214631.json  summary_google_gemini-2.0-flash-001_20250210_220158.json  summary_openai_o1_20250212_103017.json
eval/scripts/: run_llama-3.3-70-instruct_all.sh
eval/yaml/: algorithmic.yaml  claude-3.5-sonnet.yaml  claude-3.7-sonnet_thinking.yaml  deepseek-r1.yaml  example.yaml  llama-3.3-70b-instruct.yaml  logic.yaml  openai-o1.yaml  openai-o3.yaml  test.yaml
examples/: generate_word_ladder_examples.py
examples/OpenRLHF/: .gitignore  custom_reward.py  custom_reward_ppo.sh
examples/trl/: README.md  grpo_config.py  main_grpo_reward.py  requirements.txt
examples/unsloth/: requirements.txt  train_grpo_lora.py
examples/veRL/: .gitignore  README.md  launch_on_2gpu_server.sh  launch_on_4gpu.sh  main_ppo_custom_reward.py  main_ppo_custom_reward_server.py  train.sh  train_grpo.sh  train_grpo_server.sh  train_ppo.sh
examples/word_ladder/: README.md  main.py  requirements.txt  system_prompt.txt
notebooks/: codeio.ipynb  generate_anagrams.ipynb  gsm-symbolic-cot.txt  gsm_symbolic.ipynb  test_generator_files.py  verify_gsm_symbolic.ipynb
notebooks/codeio/: .gitignore  PreprocessCode.ipynb
reasoning_gym/: __init__.py  coaching.py  composite.py  dataset.py  factory.py  utils.py  version_manager.py
reasoning_gym/algebra/: __init__.py  complex_arithmetic.py  intermediate_integration.py  polynomial_equations.py  polynomial_multiplication.py  simple_equations.py  simple_integration.py  test.py
reasoning_gym/algorithmic/: __init__.py  ab.py  base_conversion.py  binary_alternation.py  binary_matrix.py  caesar_cipher.py  count_primes.py  cryptarithm.py  game_of_life.py  graph_color.py  group_anagrams.py  isomorphic_strings.py  jugs.py  letter_counting.py  letter_jumble.py  manipulate_matrix.py  number_filtering.py  number_sorting.py  palindrome_generation.py  palindrome_partitioning.py  pool_matrix.py  ransom_note.py  rotate_matrix.py  rotten_oranges.py  sentence_reordering.py  spell_backward.py  spiral_matrix.py  (+9 more)
scripts/: generate_data.py  generate_gallery.py  host_reward_server.py  test_score.py
tests/: test_ab.py  test_advanced_geometry.py  test_aiw.py  test_arc_1d.py  test_arc_1d_tasks.py  test_arc_agi.py  test_arithmetic.py  test_base_conversion.py  test_basic_arithmetic.py  test_bf.py  test_binary_alternation.py  test_binary_matrix.py  test_bitwise_arithmetic.py  test_caesar_cipher.py  test_calendar_arithmetic.py  test_chain_sum.py  test_circuit_logic.py  test_coaching.py  test_color_cube_rotation.py  test_complex_arithmetic.py  test_composite.py  test_count_bits.py  test_count_primes.py  test_countdown.py  test_countdown_game.py  test_course_schedule.py  test_cryptarithm.py  test_dataset.py  test_decimal_arithmetic.py  test_decimal_chain_sum.py  test_dice.py  test_emoji_mystery.py  test_family_relationships.py  test_figlet_fonts.py  test_fraction_simplification.py  test_futoshiki.py  test_game_of_life.py  test_gcd.py  test_graph_color.py  test_group_anagrams.py  (+65 more)
tools/: README.md
(+637 files in other folders)
